# PicaSim

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  ios_archive.sh  linux_create_appimage.sh  macos_create_app_bundle.sh  macos_notarize.sh
.github/workflows/: android-build.yml  ios-build.yml  linux-build.yml  macos-build.yml  windows-build.yml
ios/: Info.plist.in  LaunchScreen.storyboard
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
resources/: PicaSim.icns  generate_icons.py
source/Framework/: FrameBufferObject.cpp  Graphics.h  Shaders.cpp  Shaders.h  Skybox.cpp
source/PicaSim/: GameSettings.cpp  GameSettings.h  HumanController.cpp  JetEngine.cpp  JetEngine.h  Main.cpp  PicaStrings.h  PropellerEngine.cpp  PropellerEngine.h  RenderModel.cpp  Terrain.cpp  ac3d.cpp
source/PicaSim/Languages/: English.cpp
source/PicaSim/Menus/: FileMenu.cpp  Menu.cpp  PicaDialog.cpp  SettingsMenu.cpp  SettingsWidgets.cpp  UIHelpers.cpp
source/Platform/: GLCompat.h  PlatformSDL.cpp  S3ECompat.h  Texture.cpp  Texture.h  Window.cpp
source/bullet-2.81/Bullet/LinearMath/: btMatrix3x3.h  btVector3.h
